<resources>
    <string name="app_name">Tutorial Login Sederhana</string>

    <string name="title_activity_login">Sign in or create an account</string>
    <string name="title_activity_main">Dashboard</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password (Diulang)</string>
    <string name="prompt_name">Nama Lengkap</string>
    <string name="prompt_phone">Nomor Telepon</string>
    <string name="action_sign_in">Masuk atau Mendaftar</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="action_register">Buat akun baru?</string>
    <string name="action_have_account">Sudah memiliki akun?</string>
    <string name="action_submit">Kirim</string>
    <string name="error_invalid_email">Alamat email tidak valid</string>
    <string name="error_unavailable_email">Email sudah pernah terdaftar</string>
    <string name="error_invalid_password">Password tidak valid</string>
    <string name="error_invalid_password_repeat">Ulangi password dengan benar</string>
    <string name="error_incorrect_password">Password yang Anda masukkan salah</string>
    <string name="error_old_password">Password lama salah</string>
    <string name="error_field_required">Kolom ini tidak boleh dikosongi</string>
    <string name="permission_rationale">"Izin kontak diperlukan untuk menyediakan penyelesaian email."</string>
    <string name="login_header_information">Isilah form ini dengan akun login anda,
        atau buat akun terlebih dahulu untuk dapat menggunakan aplikasi ini.</string>

    <string name="txt_welcome">Selamat datang</string>

    <string name="btn_logout">Logout</string>
</resources>
